[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pylint>=3.3.7",
  "pytest>=8.3.5",
  "ruff>=0.12.3"
]
test = ["mypy>=1.16.1", "pydoclint>=0.5.11", "types-requests>=2.32.4.20250611"]

[project]
dependencies = [
  "beautifulsoup4>=4.11.0",
  "pylint>=2.15.0",
  "requests>=2.28.0",
  "toml-sort>=0.24.0"
]
description = "Precommit hook to sync pylint configuration with ruff implementation status"
license = {text = "MIT"}
name = "pylint-ruff-sync"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
test = [
  "mypy>=1.7.1",
  "pre-commit>=2.20.0",
  "pytest-cov>=4.0.0",
  "pytest>=7.0.0",
  "ruff>=0.1.6",
  "types-beautifulsoup4>=4.11.0",
  "types-requests>=2.28.0"
]

[project.scripts]
pylint-ruff-sync = "pylint_ruff_sync.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pylint_ruff_sync"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "src:scripts"
no_implicit_optional = true
python_version = "3.11"
strict = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydoclint]
allow-init-docstring = true
arg-type-hints-in-docstring = false
baseline = ".config/pydoclint-baseline.txt"
check-return-types = false
exclude = "\\.git|\\.tox|\\.venv|build|out|venv"
should-document-private-class-attributes = true
show-filenames-in-every-violation-message = true
skip-checking-short-docstrings = false
style = "google"

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,f,fh"
ignore = ["_version.py"]
jobs = 0
no-docstring-rgx = "__.*__"

[tool.pylint.classes]
max-attributes = 20
min-public-methods = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "all",
  "locally-disabled", # I0011
  "suppressed-message" # I0020
]
enable = [
  "abstract-method", # W0223
  "access-member-before-definition", # E0203
  "anomalous-unicode-escape-in-string", # W1402
  "arguments-out-of-order", # W1114
  "arguments-renamed", # W0237
  "astroid-error", # F0002
  "attribute-defined-outside-init", # W0201
  "bad-chained-comparison", # W3601
  "bad-configuration-section", # E0014
  "bad-except-order", # E0701
  "bad-file-encoding", # C2503
  "bad-format-string-key", # W1300
  "bad-inline-option", # I0010
  "bad-mcs-classmethod-argument", # C0204
  "bad-mcs-method-argument", # C0203
  "bad-plugin-value", # E0013
  "boolean-datetime", # W1502
  "c-extension-no-member", # I1101
  "chained-comparison", # R1716
  "class-variable-slots-conflict", # E0242
  "condition-evals-to-constant", # R1727
  "config-parse-error", # F0011
  "confusing-with-statement", # W0124
  "consider-swap-variables", # R1712
  "consider-using-enumerate", # C0200
  "consider-using-f-string", # C0209
  "consider-using-join", # R1713
  "consider-using-ternary", # R1706
  "contextmanager-generator-missing-cleanup", # W0135
  "cyclic-import", # R0401
  "declare-non-slot", # E0245
  "deprecated-argument", # W4903
  "deprecated-attribute", # W4906
  "deprecated-decorator", # W4905
  "deprecated-method", # W4902
  "deprecated-module", # W4901
  "deprecated-pragma", # I0022
  "disallowed-name", # C0104
  "duplicate-argument-name", # E0108
  "duplicate-code", # R0801
  "duplicate-string-formatting-argument", # W1308
  "file-ignored", # I0013
  "implicit-flag-alias", # W0213
  "invalid-character-carriage-return", # E2511
  "invalid-characters-in-docstring", # C0403
  "invalid-field-call", # E3701
  "invalid-format-index", # W1307
  "invalid-getnewargs-ex-returned", # E0313
  "invalid-getnewargs-returned", # E0312
  "invalid-length-hint-returned", # E0310
  "invalid-slice-step", # E1144
  "kwarg-superseded-by-positional-arg", # W1117
  "logging-format-truncated", # E1201
  "logging-unsupported-format", # E1200
  "method-check-failed", # F0202
  "missing-parentheses-for-call-in-test", # W0126
  "missing-timeout", # W3101
  "mixed-line-endings", # C0327
  "modified-iterating-dict", # E4702
  "modified-iterating-list", # W4701
  "no-method-argument", # E0211
  "no-name-in-module", # E0611
  "non-parent-init-called", # W0233
  "parse-error", # F0010
  "pointless-string-statement", # W0105
  "positional-only-arguments-expected", # E3102
  "possibly-unused-variable", # W0641
  "possibly-used-before-assignment", # E0606
  "preferred-module", # W0407
  "raising-format-tuple", # W0715
  "raw-checker-failed", # I0001
  "redeclared-assigned-name", # W0128
  "redefined-outer-name", # W0621
  "redefined-slots-in-subclass", # W0244
  "redundant-unittest-assert", # W1503
  "return-arg-in-generator", # E0106
  "return-in-finally", # W0134
  "shadowed-import", # W0416
  "shallow-copy-environ", # W1507
  "simplifiable-condition", # R1726
  "simplify-boolean-expression", # R1709
  "stop-iteration-return", # R1708
  "super-init-not-called", # W0231
  "superfluous-parens", # C0325
  "too-few-public-methods", # R0903
  "too-many-ancestors", # R0901
  "too-many-instance-attributes", # R0902
  "too-many-lines", # C0302
  "undefined-loop-variable", # W0631
  "unexpected-line-ending-format", # C0328
  "unknown-option-value", # W0012
  "unnecessary-list-index-lookup", # R1736
  "unnecessary-negation", # C0117
  "unreachable", # W0101
  "unrecognized-inline-option", # E0011
  "unrecognized-option", # E0015
  "unused-private-member", # W0238
  "unused-wildcard-import", # W0614
  "use-implicit-booleaness-not-comparison", # C1803
  "use-implicit-booleaness-not-comparison-to-string", # C1804
  "use-implicit-booleaness-not-comparison-to-zero", # C1805
  "useless-option-value", # R0022
  "useless-parent-delegation", # W0246
  "useless-suppression", # I0021
  "using-assignment-expression-in-unsupported-version", # W2605
  "using-constant-test", # W0125
  "using-exception-groups-in-unsupported-version", # W2603
  "using-f-string-in-unsupported-version", # W2601
  "using-generic-type-syntax-in-unsupported-version", # W2604
  "using-positional-only-args-in-unsupported-version", # W2606
  "wrong-spelling-in-comment", # C0401
  "wrong-spelling-in-docstring" # C0402
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 20

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["COM812", "D203", "D211", "D213"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/pylint_ruff_sync/toml_file.py" = ["S603", "S607"]
"tests/**" = ["EXE001", "S101", "SLF001"]

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true
